# okteta

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  ChangeLog  Mainpage.dox  README  README.developers  README.md  README.packagers  README_developers.md  README_packagers.md  TODO  snapcraft.yaml
core/: CMakeLists.txt  Messages.sh  OktetaCoreConfig.cmake.in  README  README.md  abstractbytearraymodel.cpp  abstractbytearraymodel.h  abstractbytearraymodel.hpp  abstractbytearraymodel_p.hpp  address.h  address.hpp  addressrange.h  addressrange.hpp  addressrangelist.cpp  addressrangelist.h  addressrangelist.hpp  arraychangemetrics.h  arraychangemetrics.hpp  arraychangemetricslist.h  arraychangemetricslist.hpp  bookmark.h  bookmark.hpp  bookmarkable.h  bookmarkable.hpp  bookmarklist.cpp  bookmarklist.h  bookmarklist.hpp  bookmarklistconstiteratoradapter.cpp  bookmarklistconstiteratoradapter.h  bookmarklistconstiteratoradapter.hpp  bookmarksconstiterator.h  bookmarksconstiterator.hpp  bookmarksconstiteratoradapter.h  bookmarksconstiteratoradapter.hpp  byte.h  byte.hpp  bytearraychange.h  bytearraychange.hpp  bytearraymodel.cpp  bytearraymodel.h  (+91 more)
core/charcodecs/: README  charcodec.cpp  ebcdic1047charcodec.cpp  ebcdic1047charcodec.hpp  ibm874charcodec.cpp  ibm874charcodec.hpp  jisx0201charcodec.cpp  jisx0201charcodec.hpp  textcharcodec.cpp  textcharcodec.hpp  usasciicharcodec.cpp  usasciicharcodec.hpp
core/codecs/: binarybytecodec.cpp  binarybytecodec.h  binarybytecodec.hpp  charcodec.cpp  decimalbytecodec.cpp  decimalbytecodec.h  decimalbytecodec.hpp  ebcdic1047charcodec.cpp  ebcdic1047charcodec.h  ebcdic1047charcodec.hpp  hexadecimalbytecodec.cpp  hexadecimalbytecodec.h  hexadecimalbytecodec.hpp  ibm874charcodec.cpp  ibm874charcodec.hpp  jisx0201charcodec.cpp  jisx0201charcodec.h  jisx0201charcodec.hpp  kbinarybytecodec.cpp  kbinarybytecodec.h  kbytecodec.cpp  kcharcodec.cpp  kdecimalbytecodec.cpp  kdecimalbytecodec.h  kebcdic1047charcodec.cpp  kebcdic1047charcodec.h  khexadecimalbytecodec.cpp  khexadecimalbytecodec.h  koctalbytecodec.cpp  koctalbytecodec.h  ktextcharcodec.cpp  ktextcharcodec.h  octalbytecodec.cpp  octalbytecodec.h  octalbytecodec.hpp  textcharcodec.cpp  textcharcodec.h  textcharcodec.hpp  usasciicharcodec.cpp  usasciicharcodec.h  (+2 more)
core/includes/: AbstractByteArrayModel  Address  AddressRange  ArrayChangeMetrics  Bookmark  Bookmarkable  BookmarksConstIterator  Byte  ByteArrayChange  ByteArrayModel  ChangeHistory  ChangesDescribable  CharCodec  Character  FileByteArrayModel  NumberRange  PieceTableByteArrayModel  Range  Size  ValueCodec  Versionable  (+1 more)
designer/: CMakeLists.txt  README  README.md  bytearraycolumnviewdesignerfactory.cpp  bytearraycolumnviewdesignerfactory.h  bytearraycolumnviewdesignerfactory.hpp  bytearrayrowviewdesignerfactory.cpp  bytearrayrowviewdesignerfactory.h  bytearrayrowviewdesignerfactory.hpp  fillerbytearraymodel.cpp  fillerbytearraymodel.h  fillerbytearraymodel.hpp  main.cpp  oktetawidgetdesignerfactorycollection.cpp  oktetawidgetdesignerfactorycollection.h  oktetawidgetdesignerfactorycollection.hpp
gui/: CMakeLists.txt  Messages.sh  OktetaGuiConfig.cmake.in  README  README.md  abstractbytearraycolumnrenderer.cpp  abstractbytearraycolumnrenderer.h  abstractbytearraycolumnrenderer.hpp  abstractbytearraycolumnrenderer_p.cpp  abstractbytearraycolumnrenderer_p.hpp  abstractbytearrayview.cpp  abstractbytearrayview.h  abstractbytearrayview.hpp  abstractbytearrayview_p.cpp  abstractbytearrayview_p.h  abstractbytearrayview_p.hpp  bordercolumnrenderer.cpp  bordercolumnrenderer.h  bordercolumnrenderer.hpp  bordercolumnrenderer_p.cpp  bordercolumnrenderer_p.hpp  bytearraycolumnview.cpp  bytearraycolumnview.h  bytearraycolumnview.hpp  bytearraycolumnview_p.cpp  bytearraycolumnview_p.h  bytearraycolumnview_p.hpp  bytearrayrowcolumnrenderer.cpp  bytearrayrowcolumnrenderer.h  bytearrayrowcolumnrenderer.hpp  bytearrayrowcolumnrenderer_p.cpp  bytearrayrowcolumnrenderer_p.hpp  bytearrayrowview.cpp  bytearrayrowview.h  bytearrayrowview.hpp  bytearrayrowview_p.cpp  bytearrayrowview_p.h  bytearrayrowview_p.hpp  bytearraytablecursor.cpp  bytearraytablecursor.h  (+99 more)
includes/: AbstractByteArrayColumnRenderer  AbstractByteArrayModel  AbstractByteArrayView  AbstractColumnRenderer  AbstractColumnStylist  Address  AddressRange  ArrayChangeMetrics  Bookmark  Bookmarkable  BookmarksConstIterator  BorderColumnRenderer  Byte  ByteArrayChange  ByteArrayColumnView  ByteArrayModel  ByteArrayRowColumnRenderer  ByteArrayRowView  ByteArrayTableLayout  ByteArrayTableRanges  CMakeLists.txt  ChangeHistory  ChangesDescribable  CharByteArrayColumnRenderer  CharCodec  Character  ColumnsView  FileByteArrayModel  Line  LinePosition  LinePositionRange  LineRange  NumberRange  OffsetColumnRenderer  OffsetFormat  PieceTableByteArrayModel  Range  Section  Size  ValueByteArrayColumnRenderer  (+4 more)
kasten/: CMakeLists.txt  Messages.sh  README  README.md
lib/: CMakeLists.txt  Makefile.am  helper.h  kabstractbytearraymodel.cpp  kabstractbytearraymodel.h  kadds.h  kbigbuffer.cpp  kbigbuffer.h  kbordercoltextexport.cpp  kbordercoltextexport.h  kbordercolumn.cpp  kbordercolumn.h  kbuffercoltextexport.cpp  kbuffercoltextexport.h  kbuffercolumn.cpp  kbuffercolumn.h  kbuffercoord.h  kbuffercursor.cpp  kbuffercursor.h  kbufferdrag.cpp  kbufferdrag.h  kbufferlayout.cpp  kbufferlayout.h  kbufferranges.cpp  kbufferranges.h  kbytearraymodel.cpp  kbytearraymodel.h  kbytearraymodel_p.cpp  kbytearraymodel_p.h  kbytecodec.cpp  kbytecodec.h  kbytesedit.cpp  kbytesedit.h  kcharcodec.h  kcharcoltextexport.cpp  kcharcoltextexport.h  kcharcolumn.cpp  kcharcolumn.h  kcoltextexport.h  kcolumn.cpp  (+50 more)
program/: CMakeLists.txt  Messages.sh  README  README.md  TODO  about-config.hpp.in  about.cpp  about.h  about.hpp  main.cpp  mainwindow-config.hpp.in  mainwindow.cpp  mainwindow.h  mainwindow.hpp  okteta.appdata.xml  okteta.desktop  okteta.qrc  oktetaui.rc  org.kde.okteta.appdata.xml  org.kde.okteta.desktop  program.cpp  program.h  program.hpp  update-png.sh
(+4513 files in other folders)
